# MatrixCalculator

./: Readme.txt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/matrixcalculator20/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/matrixcalculator20/: MainActivity.kt
app/src/main/res/drawable/: result_card_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/matrixcalculator20/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
